[gd_scene load_steps=4 format=2]

[ext_resource path="res://textures/hostile/hostile_5.png" type="Texture" id=1]
[ext_resource path="res://scripts/game/hostile/hostile_5.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 180.0

[node name="Hostile5" type="KinematicBody2D"]
position = Vector2( -20, -20 )
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Particle" type="CPUParticles2D" parent="."]
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
speed_scale = 3.0
explosiveness = 0.8
lifetime_randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 20, 20 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.8
angular_velocity = 25.0
angular_velocity_random = 1.0
radial_accel = 20.0
radial_accel_random = 0.5
damping = 80.0
scale_amount = 5.0
scale_amount_random = 1.0
color = Color( 0.501961, 0, 0.501961, 1 )

[node name="TimerSpawnBullet" type="Timer" parent="."]

[node name="TimerDeath" type="Timer" parent="."]

[connection signal="timeout" from="TimerSpawnBullet" to="." method="_on_TimerSpawnBullet_timeout"]
[connection signal="timeout" from="TimerDeath" to="." method="_on_TimerDeath_timeout"]
